@@ -15,21 +15,21 @@ function pretty_urls_topic_filter($urls)
 	foreach ($urls as $crc => $url)
 	{
 		//	Get the topic data ready to query the database with
-		$found = preg_match($pattern, $url['url'], $matches);
-		if (!isset($url['replacement']) && $found)
-		{
-			if (strpos($matches[2], '.') !== false)
-				list ($urls[$crc]['topic_id'], $urls[$crc]['start']) = explode('.', $matches[2]);
-			else
+		if (!isset($url['replacement']))
+			if (preg_match($pattern, $url['url'], $matches))
 			{
-				$urls[$crc]['topic_id'] = $matches[2];
-				$urls[$crc]['start'] = 0;
+				if (strpos($matches[2], '.') !== false)
+					list ($urls[$crc]['topic_id'], $urls[$crc]['start']) = explode('.', $matches[2]);
+				else
+				{
+					$urls[$crc]['topic_id'] = $matches[2];
+					$urls[$crc]['start'] = 0;
+				}
+				$urls[$crc]['topic_id'] = (int) $urls[$crc]['topic_id'];
+				$urls[$crc]['match1'] = $matches[1];
+				$urls[$crc]['match3'] = $matches[3];
+				$query_data[] = $urls[$crc]['topic_id'];
 			}
-			$urls[$crc]['topic_id'] = (int) $urls[$crc]['topic_id'];
-			$urls[$crc]['match1'] = $matches[1];
-			$urls[$crc]['match3'] = $matches[3];
-			$query_data[] = $urls[$crc]['topic_id'];
-		}
 	}
 
 	//	Query the database with these topic IDs
@@ -47,13 +47,13 @@ function pretty_urls_topic_filter($urls)
 				'pretty_url' => isset($row['pretty_url']) ? $row['pretty_url'] : $row['ID_TOPIC'],
 			);
 		mysql_free_result($query);
-	}
 
-	//	Build the replacement URLs
-	foreach ($urls as $crc => $url)
-	{
-		if (isset($url['topic_id']))
-			$urls[$crc]['replacement'] = $modSettings['pretty_root_url'] . '/' . $topicData[$url['topic_id']]['pretty_board'] . '/' . $topicData[$url['topic_id']]['pretty_url'] . '/' . $url['start'] . '/' . $url['match1'] . $url['match3'];
+		//	Build the replacement URLs
+		foreach ($urls as $crc => $url)
+		{
+			if (isset($url['topic_id']))
+				$urls[$crc]['replacement'] = $modSettings['pretty_root_url'] . '/' . $topicData[$url['topic_id']]['pretty_board'] . '/' . $topicData[$url['topic_id']]['pretty_url'] . '/' . $url['start'] . '/' . $url['match1'] . $url['match3'];
+		}
 	}
 	return $urls;
 }
@@ -66,19 +66,20 @@ function pretty_urls_board_filter($urls)
 	$pattern = '~' . $scripturl . '(.*)board=([.0-9]+)(.*)~S';
 	foreach ($urls as $crc => $url)
 	{
-		$found = preg_match($pattern, $url['url'], $matches);
-		if (!isset($url['replacement']) && $found)
-		{
-			if (strpos($matches[2], '.') !== false)
-				list ($board_id, $start) = explode('.', $matches[2]);
-			else
+		//	Split out the board URLs and replace them
+		if (!isset($url['replacement']))
+			if (preg_match($pattern, $url['url'], $matches))
 			{
-				$board_id = $matches[2];
-				$start = 0;
+				if (strpos($matches[2], '.') !== false)
+					list ($board_id, $start) = explode('.', $matches[2]);
+				else
+				{
+					$board_id = $matches[2];
+					$start = 0;
+				}
+				$board_id = (int) $board_id;
+				$urls[$crc]['replacement'] = $modSettings['pretty_root_url'] . '/' . (isset($context['pretty']['board_urls'][$board_id]) ? $context['pretty']['board_urls'][$board_id] : $board_id) . '/' . $start . '/' . $matches[1] . $matches[3];	
 			}
-			$board_id = (int) $board_id;
-			$urls[$crc]['replacement'] = $modSettings['pretty_root_url'] . '/' . (isset($context['pretty']['board_urls'][$board_id]) ? $context['pretty']['board_urls'][$board_id] : $board_id) . '/' . $start . '/' . $matches[1] . $matches[3];	
-		}
 	}
 	return $urls;
 }
